// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar correctly applies the theme context className 1`] = `
<ThemeContextProvider
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  theme={
    Object {
      "className": "orion-fusion-theme",
    }
  }
>
  <InjectIntl(Avatar)
    alt="user"
    initials="JS"
  >
    <Avatar
      alt="user"
      color="auto"
      initials="JS"
      intl={
        Object {
          "defaultFormats": Object {},
          "defaultLocale": "en",
          "formatDate": [Function],
          "formatHTMLMessage": [Function],
          "formatMessage": [Function],
          "formatNumber": [Function],
          "formatPlural": [Function],
          "formatRelative": [Function],
          "formatTime": [Function],
          "formats": Object {},
          "formatters": Object {
            "getDateTimeFormat": [Function],
            "getMessageFormat": [Function],
            "getNumberFormat": [Function],
            "getPluralFormat": [Function],
            "getRelativeFormat": [Function],
          },
          "locale": "en",
          "messages": null,
          "now": [Function],
          "onError": [Function],
          "textComponent": "span",
          "timeZone": null,
        }
      }
      isAriaHidden={false}
      isDeceased={false}
    >
      <div
        className="avatar one orion-fusion-theme"
      >
        <span
          alt="user"
          aria-hidden={false}
          aria-label="user"
          className="initials"
          role="img"
        >
          JS
        </span>
      </div>
    </Avatar>
  </InjectIntl(Avatar)>
</ThemeContextProvider>
`;

exports[`Avatar should render a default avatar 1`] = `
<div
  className="avatar one"
>
  <span
    alt="user"
    aria-hidden={false}
    aria-label="user"
    className="initials"
    role="img"
  >
    JS
  </span>
</div>
`;

exports[`Avatar should render an avatar with an automated color variant, based on a hashValue 1`] = `
<div
  className="avatar two"
>
  <span
    alt="user"
    aria-hidden={false}
    aria-label="user"
    className="initials"
    role="img"
  >
    JS
  </span>
</div>
`;

exports[`Avatar should render an avatar with color variant netural 1`] = `
<div
  className="avatar neutral"
>
  <span
    alt="user"
    aria-hidden={false}
    aria-label="user"
    className="initials"
    role="img"
  >
    JS
  </span>
</div>
`;

exports[`Avatar should render an avatar with color variant one 1`] = `
<div
  className="avatar one"
>
  <span
    alt="user"
    aria-hidden={false}
    aria-label="user"
    className="initials"
    role="img"
  >
    JS
  </span>
</div>
`;

exports[`Avatar should render an avatar with custom props 1`] = `
<div
  className="avatar one"
  id="custom props avatar"
>
  <span
    alt="user"
    aria-hidden={false}
    aria-label="user"
    className="initials"
    role="img"
  >
    JS
  </span>
</div>
`;

exports[`Avatar should render an avatar with initials and aria hidden 1`] = `
<div
  className="avatar one"
>
  <span
    alt="user"
    aria-hidden={true}
    aria-label="user"
    className="initials"
    role="img"
  >
    JJ
  </span>
</div>
`;

exports[`Avatar should render an avatar with provided size 1`] = `
<div
  className="avatar one"
  style={
    Object {
      "fontSize": "5em",
    }
  }
>
  <span
    alt="user"
    aria-hidden={false}
    aria-label="user"
    className="initials"
    role="img"
  >
    JS
  </span>
</div>
`;

exports[`Avatar should render an isDeceased avatar 1`] = `
<div
  className="avatar one is-deceased"
>
  <span
    alt="user, Terra.avatar.deceased"
    aria-hidden={false}
    aria-label="user, Terra.avatar.deceased"
    className="initials"
    role="img"
  >
    JS
  </span>
</div>
`;

exports[`Avatar should render fallback initials when invalid image is passed in with initials 1`] = `
<div
  className="avatar five image"
>
  <Image
    alt="placeholder"
    className="image"
    fit="cover"
    isFluid={false}
    onError={[Function]}
    placeholder={
      <span
        alt="placeholder"
        aria-hidden={false}
        aria-label="placeholder"
        className="initials"
        role="img"
      >
        JD
      </span>
    }
    src="https://path/to/invalid_image.jpg"
    variant="default"
  />
</div>
`;

exports[`Avatar should render image avatar when image is passed in 1`] = `
<div
  className="avatar five image"
>
  <Image
    alt="placeholder"
    className="image"
    fit="cover"
    isFluid={false}
    onError={[Function]}
    placeholder={
      <span
        alt="placeholder"
        aria-hidden={false}
        aria-label="placeholder"
        className="initials"
        role="img"
      >
        JS
      </span>
    }
    src="test-file-stub"
    variant="default"
  />
</div>
`;

exports[`Avatar should render one initial avatar when one initial is passed in 1`] = `
<div
  className="avatar one"
>
  <span
    alt="user"
    aria-hidden={false}
    aria-label="user"
    className="initials"
    role="img"
  >
    J
  </span>
</div>
`;

exports[`Avatar should render two initials avatar when more than two initials are passed in 1`] = `
<div
  className="avatar one"
>
  <span
    alt="user"
    aria-hidden={false}
    aria-label="user"
    className="initials"
    role="img"
  >
    JJ
  </span>
</div>
`;

exports[`Avatar should render two initials avatar when two initials are passed in 1`] = `
<div
  className="avatar one"
>
  <span
    alt="user"
    aria-hidden={false}
    aria-label="user"
    className="initials"
    role="img"
  >
    JS
  </span>
</div>
`;
